syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "user.proto";

option go_package = "github.com/mattiusz/based_backend/internal/gen/proto/v1";

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (Event);
  rpc GetEventByID(GetEventByIDRequest) returns (Event);
  rpc GetNearbyEvents(GetNearbyEventsRequest) returns (GetNearbyEventsResponse);
  rpc GetUserEvents(GetUserEventsRequest) returns (GetUserEventsResponse);
  rpc JoinEvent(JoinEventRequest) returns (google.protobuf.Empty);
  rpc LeaveEvent(LeaveEventRequest) returns (google.protobuf.Empty);
  rpc UpdateEvent(UpdateEventRequest) returns (Event);
  rpc GetEventAttendeeStats(GetEventAttendeeStatsRequest) returns (EventAttendeeStats);
}

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Event {
  // Core identifiers
  bytes event_id = 1;
  bytes creator_id = 2;
  
  // Basic event information
  string name = 3;
  optional string venue = 4;
  optional string description = 5;
  optional bytes thumbnail = 6;
  STATUS status = 7;
  
  // Time and location
  Location location = 8;
  google.protobuf.Timestamp datetime = 9;
  int32 timezone = 10;
  google.protobuf.Timestamp created_at = 11;
  
  // Capacity and attendance
  int32 max_attendees = 12;
  int64 number_of_attendees = 13;
  int64 number_of_comments = 14;
  
  // Categories and tags
  repeated string categories = 15;
  
  // Participation restrictions
  int32 age_range_min = 16;
  int32 age_range_max = 17;
  bool allow_female = 18;
  bool allow_male = 19;
  bool allow_diverse = 20;
}

enum STATUS {
  EVENT_STATUS_UNSPECIFIED = 0;
  EVENT_STATUS_UPCOMING = 1;
  EVENT_STATUS_ONGOING = 2;
  EVENT_STATUS_COMPLETED = 3;
  EVENT_STATUS_CANCELLED = 4;
}

enum CATEGORY {
  EVENT_CATEGORY_UNSPECIFIED = 0;
  EVENT_CATEGORY_SPORTS = 1;
  EVENT_CATEGORY_MUSIC = 2;
  EVENT_CATEGORY_FOOD = 3;
  EVENT_CATEGORY_ARTS = 4;
  EVENT_CATEGORY_EDUCATION = 5;
  EVENT_CATEGORY_SOCIAL = 6;
  EVENT_CATEGORY_BUSINESS = 7;
  EVENT_CATEGORY_OTHER = 8;
}

message CreateEventRequest {
  bytes creator_id = 1;
  string name = 2;
  Location location = 3;
  google.protobuf.Timestamp datetime = 4;
  int32 timezone = 5;
  int32 max_attendees = 6;
  string venue = 7;
  string description = 8;
  repeated CATEGORY categories = 9;
  int32 age_range_min = 10;
  int32 age_range_max = 11;
  bool allow_female = 12;
  bool allow_male = 13;
  bool allow_diverse = 14;
}

message GetEventByIDRequest {
  bytes event_id = 1;
}

message GetNearbyEventsRequest {
  Location location = 1;
  double radius_meters = 2;
  GENDER gender = 3;
  STATUS status = 4;
  int32 limit = 5;
}

message GetNearbyEventsResponse {
  repeated EventWithDistance events = 1;
}

message EventWithDistance {
  Event event = 1;
  double distance_meters = 2;
}

message GetUserEventsRequest {
  bytes user_id = 1;
}

message GetUserEventsResponse {
  repeated Event events = 1;
}

message JoinEventRequest {
  bytes event_id = 1;
  bytes user_id = 2;
}

message LeaveEventRequest {
  bytes event_id = 1;
  bytes user_id = 2;
}

message UpdateEventRequest {
  bytes event_id = 1;
  STATUS status = 2;
}

message GetEventAttendeeStatsRequest {
  bytes event_id = 1;
}

message EventAttendeeStats {
  int64 female_count = 1;
  int64 male_count = 2;
  int64 diverse_count = 3;
}
